# millforge

./: .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
scripts/: ci_package_smoke.py  installed_package_smoke.py
src/millforge/: __init__.py  _version.py  artifacts.py  compiled_plan.py  contracts.py  eval_artifacts.py  eval_boundary.py  eval_modes.py  eval_presets.py  eval_reports.py  eval_suite.py  eval_trials.py  eval_workflow.py  exceptions.py  model_backend.py  protocols.py  runtime.py
src/millforge/_forge/: LICENSE  PROVENANCE.json  UPDATE_POLICY.md  __init__.py  adapter.py  base_runner.py  errors.py
src/millforge/_forge/clients/: __init__.py  base.py
src/millforge/_forge/context/: __init__.py  manager.py  strategies.py
src/millforge/_forge/core/: __init__.py  inference.py  messages.py  runner.py  steps.py  workflow.py
src/millforge/_forge/guardrails/: __init__.py  nudge.py  (+4 more)
src/millforge/base/: __init__.py  composition.py  context.py  harness.py  identity.py  options.py  platform.py  prompt.py  runner.py
src/millforge/compiler/: __init__.py  artifact_validation.py  canonicalization.py  capabilities.py  catalogs.py  diagnostics.py  graph.py  lowering.py  output.py  parsing.py  requests.py  schema_validation.py  semantic.py  service.py  source.py  validators.py
src/millforge/connectors/: __init__.py  admission.py  broker.py  contracts.py  diagnostics.py  fake.py  runtime.py
src/millforge/custom_tools/: __init__.py  compiler.py  contracts.py  diagnostics.py
src/millforge/eval_fixtures/: __init__.py
src/millforge/testing/: __init__.py
src/millforge/tools/: __init__.py  builtin_runtime.py  builtins.py  execution.py  path_policy.py  pi_compat_catalog.py  pi_compat_runtime.py  registry.py  results.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_base_composition.py  test_base_context.py  test_base_harness.py  test_base_identity.py  test_base_platform.py  test_base_public_api.py  test_base_runner.py  test_builtin_tool_catalog.py  test_connector_admission.py  test_connector_custom_tool_closure.py  test_connector_runtime_boundary.py  test_contracts.py  test_custom_tool_compiler.py  test_distribution_metadata.py  test_eval_artifacts.py  test_eval_boundary.py  test_eval_modes.py  test_eval_presets.py  test_eval_reports.py  test_eval_suite.py  test_eval_trials.py  test_eval_workflow_graph.py  test_exceptions.py  test_forge_adapter_translation.py  test_forge_behavior_patches.py  test_forge_boundary_packaging.py  test_forge_provenance.py  test_in_memory_compiler.py  test_integration.py  test_model_backend.py  test_pi_compat_editing.py  test_pi_compat_operations.py  test_pi_compat_process.py  test_pi_compat_search.py  test_pi_compat_tool_catalog.py  test_pi_compat_tool_execution.py  test_preflight.py  (+9 more)
tests/compiler/: conftest.py  test_artifact_validation.py  test_builtin_compiler_fixtures.py  test_canonicalization.py  test_capabilities.py  test_catalogs.py  test_determinism_and_diagnostics_sentinel.py  test_diagnostics.py  test_frontend_boundaries.py  test_graph.py  test_lowering.py  test_output.py  test_parsing.py  test_requests.py  test_schema_validation.py  test_semantic.py  test_service.py  test_source.py
tests/compiler/fixtures/: builtin_arbiter_harness.yaml  builtin_builder_harness.yaml  builtin_checker_harness.yaml  builtin_planner_harness.yaml  golden_canonical_semantic.json  golden_compiled_plan.json  golden_harness.json  golden_harness.yaml  representative_blocked_artifact.json  representative_blocked_artifact.yaml  representative_simple_success.json  representative_simple_success.yaml  schema_validation_golden.json
tests/fixtures/: default_runner_readiness_closure_report.md  spec04_conformance_matrix.json  spec05_closure_report.md  spec05_conformance_matrix.json  typed_package_consumer.py
tests/fixtures/eval_presets/: readiness_report.json
tests/fixtures/eval_workflow/: compact_graph.json  default_eval_small_millforge_mode.json  default_eval_small_pi_mode.json
tests/fixtures/python_compatibility/: v1.json
tests/fixtures/spec05_mixed_harness/: harness.json
(+55 files in other folders)
