[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millforge"
version = "0.1.0"
description = "Millforge — a reliability layer for self-hosted LLM tool-calling, derived from Forge guardrails principles."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Millforge Contributors"}]
readme = "README.md"
keywords = ["llm", "tool-calling", "agents", "guardrails", "millforge"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/tim-osterhus/millforge"
Repository = "https://github.com/tim-osterhus/millforge"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/millforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
