[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millforge"
version = "0.1.0"
description = "Millforge — a reliability layer for self-hosted LLM tool-calling, derived from Forge guardrails principles."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Millforge Contributors"}]
readme = "README.md"
keywords = ["llm", "tool-calling", "agents", "guardrails", "millforge"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/tim-osterhus/millforge"
Repository = "https://github.com/tim-osterhus/millforge"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/millforge"]

[tool.hatch.build.targets.wheel.force-include]
"src/millforge/_forge/LICENSE" = "millforge/_forge/LICENSE"
"src/millforge/_forge/PROVENANCE.json" = "millforge/_forge/PROVENANCE.json"
"src/millforge/_forge/UPDATE_POLICY.md" = "millforge/_forge/UPDATE_POLICY.md"

[tool.hatch.build.targets.sdist]
only-include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/millforge",
]

[tool.hatch.build.targets.sdist.force-include]
"src/millforge/_forge/LICENSE" = "src/millforge/_forge/LICENSE"
"src/millforge/_forge/PROVENANCE.json" = "src/millforge/_forge/PROVENANCE.json"
"src/millforge/_forge/UPDATE_POLICY.md" = "src/millforge/_forge/UPDATE_POLICY.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=tests/fixtures/eval_workflow/workspace"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "live_model_backend: opt-in live OpenAI-compatible model backend smoke",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
# Keep broad `mypy .` scoped to this package's owned Python surface. The
# vendored Forge reference tree creates a duplicate top-level `tests` package,
# repository runtime metadata under `millrace-agents/` is not package code, and
# the private Forge subset is upstream-derived code covered by provenance tests
# rather than Millforge's owned type surface.
exclude = "^(ref-forge|millrace-agents|src/millforge/_forge)/"

[[tool.mypy.overrides]]
module = "millforge._forge.*"
follow_imports = "skip"
